@@ -32,6 +32,7 @@ import org.springframework.stereotype.Component;
 @Component
 public class JwtTokenProvider {
 
+    public static final String AUTHORIZATION_HEADER = "Authorization";  // Header KEY 값
     private static final String AUTHORITIES_KEY = "auth";
     private static final String BEARER_TYPE = "Bearer";
     private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 60 * 120;            // 120분
@@ -43,6 +44,8 @@ public class JwtTokenProvider {
     public JwtTokenProvider(@Value("${jwt.secret}") String secretKey) {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
         this.key = Keys.hmacShaKeyFor(keyBytes);
+
+        //this.key =  new SecretKeySpec(secretKey.getBytes(StandardCharsets.UTF_8), "HmacSHA256");
     }
 
     /**
@@ -59,7 +62,7 @@ public class JwtTokenProvider {
 
         long now = (new Date()).getTime();
 
-        /** Access Token 생성
+        /* Access Token 생성
          *  복호화 하여 인증 벙보를 생성
          */
         Date accessTokenExpiresln = new Date(now + ACCESS_TOKEN_EXPIRE_TIME);
@@ -96,7 +99,7 @@ public class JwtTokenProvider {
         Collection<? extends GrantedAuthority> authorities =
             Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
             .map(SimpleGrantedAuthority::new)
-            .toList();
+            .collect(Collectors.toList());
 
         // UserDetails 객체를 만들어 Authentication를 반환
         UserDetails principal = new User(claims.getSubject(), "", authorities);
@@ -104,7 +107,7 @@ public class JwtTokenProvider {
     }
 
     // 토큰 정보를 검증하는 메서드
-    public boolean vaildateToken(String token) {
+    public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder()
                 .setSigningKey(key)
@@ -120,7 +123,7 @@ public class JwtTokenProvider {
         } catch (IllegalArgumentException e) {  // jwt 클레임 문자열이 비어있을 경우
             log.info("JWT claims string is empty.", e);
         }
-        return false;   // 예외 발생 시 false 반환
+        return false;
     }
 
     // Access 토큰을 복호화하여 토큰에 포함된 클레임을 반환
